support break and continue(bug)

--- a/LoxShap.Demo/Properties/launchSettings.json
+++ b/LoxShap.Demo/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "LoxSharp.Demo": {
       "commandName": "Project",
-      "commandLineArgs": "test.txt",
+      "commandLineArgs": "whileloop.lox\r\n",
       "workingDirectory": "."
     }
   }
