Optimize Global variable

--- a/LoxSharp.Demo/Properties/launchSettings.json
+++ b/LoxSharp.Demo/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "LoxSharp.Demo": {
       "commandName": "Project",
-      "commandLineArgs": "test.lox\r\n",
+      "commandLineArgs": "test.lox",
       "workingDirectory": "."
     }
   }
